kustomize/network-stack/cillium/CiliumClusterwideNetworkPolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: enable-l7-visibility-all
spec:
  endpointSelector: {}
  egressDeny: []
  ingressDeny: []
  egress:
  - {}
  ingress:
  - {}
  enableDefaultDeny:
    egress: false
    ingress: false
  labels:
  - key: io.cilium.policy.visibility
    value: "true"
